--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Sumador</title>
   </head>
   <body>
-    <h1>Sumador</h1>
+    <h1>Sumador!</h1>
     <form id="sumar-form">
       <label for="primer-numero">Primer número:</label>
       <input type="number" id="primer-numero" />
